@@ -1,0 +1,19 @@
+<table class="panel" cellpadding="0" cellspacing="0">
+  <tr>
+    <td><div class="panelTitle"><span class="panelTitleText">{$title}</span><div class="panelTitleRight"><img src="{atkthemeimg tabRight.gif}" alt="tabend"><div style="visibility: hidden" id="atkbusy"><img src="{atkthemeimg spinner.gif}" alt="Busy"/></div></div></div></td>
+  </tr>
+  <tr>
+    <td class="panelHeader"><img src="{atkthemeimg contentheaderright.jpg}" alt="" align="right"></td>
+  </tr>
+  <tr>
+    <td class="panelContent">
+      <div class="panelContent2">
+      {$content}
+      </div>
+    </td>
+  </tr>
+  <tr>
+    <td class="panelFooter"><img src="{atkthemeimg contentfooterright.jpg}" alt="" align="right"></td>
+  </tr>
+</table>
+<br class="clearfloat" />
